oxiplate/tests/crates/require-specifying-escaper/tests/broken/require-specifying-escaper.stderr
error: Escapers must be specified on all writs due to `require_specifying_escaper` config setting being set to `true` in `/oxiplate.toml`.
 --> tests/broken/require-specifying-escaper.rs:4:25
  |
4 | #[oxiplate_inline = "{{ message }}"]
  |                         ^^^^^^^^^^
